kuber/master-couchbase.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchbase-master-service
spec:
  selector:
    app: couchbase-master-pod
  type: NodePort
  ports:
    - name: admin
      port: 8091
      protocol: TCP
